[package]
name = "rustreexo"
version = "0.3.0"
authors = ["Calvin Kim <calvin@kcalvinalvin.info>"]
edition = "2018"
description = "A Rust implementation of Utreexo"
license = "MIT"
repository = "https://github.com/mit-dci/rustreexo"
readme = "README.md"
homepage = "https://github.com/mit-dci/rustreexo"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitcoin_hashes = "0.14"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"

[features]
with-serde = ["serde"]
default = []

[[example]]
name = "simple-stump-update"

[[example]]
name = "proof-update"

[[example]]
name = "custom-hash-type"
