[package]
name = "rustreexo"
version = "0.4.0"
authors = ["Calvin Kim <calvin@kcalvinalvin.info>"]
edition = "2018"
description = "A Rust implementation of Utreexo"
license = "MIT"
repository = "https://github.com/mit-dci/rustreexo"
readme = "README.md"
homepage = "https://github.com/mit-dci/rustreexo"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitcoin_hashes = "0.17.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
criterion = { version = ">=0.4.0", features = ["html_reports"] }
rand = "0.9.2"

[features]
with-serde = ["serde"]
default = []

[lints.clippy]
use_self = "warn"
incompatible_msrv = "allow"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bench)'] }

[[example]]
name = "simple-stump-update"

[[example]]
name = "proof-update"

[[example]]
name = "custom-hash-type"

[[bench]]
name = "accumulator_benchmarks"
harness = false

[[bench]]
name = "proof_benchmarks"
harness = false

[[bench]]
name = "stump_benchmarks"
harness = false
