[package]
name = "rustreexo"
version = "0.4.0"
authors = ["Calvin Kim <calvin@kcalvinalvin.info>"]
edition = "2018"
description = "A Rust implementation of Utreexo"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mit-dci/rustreexo"
readme = "README.md"
homepage = "https://github.com/mit-dci/rustreexo"
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitcoin_hashes = { version = "0.20", default-features = false }
hex-conservative = { version = "1.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
hashbrown = "0.16.1"
bitcoin-io = { version = "0.3.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
criterion = { version = ">=0.5.1", features = ["html_reports"] }
rand = "0.9.2"

[features]
default = ["std"]
std = ["bitcoin_hashes/std", "hex-conservative/std"]
with-serde = ["serde"]

[lints.clippy]
use_self = "warn"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bench)'] }

[[example]]
name = "simple-stump-update"

[[example]]
name = "proof-update"

[[example]]
name = "custom-hash-type"
# Compile AccumulatorHash with the `std::io::{Read, Write}` trait bounds
required-features = ["std"]

[[bench]]
name = "accumulator_benchmarks"
harness = false

[[bench]]
name = "proof_benchmarks"
harness = false

[[bench]]
name = "stump_benchmarks"
harness = false
